# aigis

./: .env.example  .gitignore  Cargo.toml  Dockerfile  compose.yml  prompt.txt  prompt_cli.txt  readme.md
.github/workflows/: release.yml
crates/bluesky-bot/: Cargo.toml
crates/bluesky-bot/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/logi/: Cargo.toml
crates/logi/src/: lib.rs  llm.rs  vdb.rs
crates/logi/src/kv/: mod.rs
crates/logi/src/tools/: calc.rs  mod.rs  search.rs  website.rs
src/: ai.rs  cli.rs  embed.rs  llm.rs  main.rs  vdb.rs
src/tools/: calc.rs  search.rs  website.rs
