[package]
name = "aigis"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
bsky-sdk = "0.1"
rocketman = "0.1"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
genai = "0.2.4"
async-trait = "0.1.88"
atrium-api = { version = "0.25.3", features = ["tokio"] }
dotenvy = "0.15.7"
fastembed = "4.8.0"
qdrant-client = "1.14.0"
uuid = { version = "1.17.0", features = ["v5"] }
once_cell = "1.21.3"
regex = "1.11.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
colored = "3.0.0"
calc = "0.4.0"
reqwest = "0.12.20"
scraper = "0.23.1"
futures = "0.3.31"
fast_html2md = "0.0.48"
termimad = "0.33.0"
time = { version = "0.3.41", features = ["formatting"] }
