[workspace]
members = ["crates/logi", "crates/cli", "crates/bluesky-bot"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1.88"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
colored = "3.0.0"
termimad = "0.33.0"
genai = "0.2.4"
time = { version = "0.3.41", features = ["formatting"] }
