[package]
name = "bluesky-bot"
version = "0.1.0"
edition = "2021"
description = "Bluesky bot binary for the aigis project."

[[bin]]
name = "bluesky-bot"
path = "src/main.rs"

[dependencies]
atrium-api = { version = "0.25.3", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bsky-sdk = "0.1"
rocketman = "0.2.3"
logi = { path = "../logi" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
genai.workspace = true
dotenvy = "0.15.7"
async-trait = "0.1.86"

metrics = "0.24.2"
tracing-subscriber = "0.3"
metrics-exporter-prometheus = "0.17.0"
fastembed = "4.8.0"
qdrant-client = "1.14.0"
uuid = { version = "1.17.0", features = ["v5"] }
once_cell = "1.21.3"
futures-core = "0.3.31"
calc = "0.4.0"
reqwest = "0.12.20"
scraper = "0.23.1"
fast_html2md = "0.0.48"
multibase = "0.9.1"
time.workspace = true
